--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
     "nyc": "^15.1.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "serverless-http": "^2.5.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
